--- a/app/src/main/res/layout/activity_contribute.xml
+++ b/app/src/main/res/layout/activity_contribute.xml
@@ -92,6 +92,27 @@
         android:id="@+id/address"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category:"/>
+
+        <Spinner
+            android:id="@+id/planets_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+
+    </LinearLayout>
+
+
 
     <TextView
         android:layout_width="wrap_content"
