--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -58,10 +58,16 @@
                 android:id="@+id/comment"
                 />
 
+            <Spinner
+                android:id="@+id/spin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Submit"/>
+                android:text="Submit"
+                android:id="@+id/submitcomment"/>
 
         </LinearLayout>
     </ScrollView>
