--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -102,6 +102,21 @@
                 android:text="Submit"
                 android:id="@+id/submitcomment"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:scrollbars="vertical"
+                    android:id="@+id/recyclerview">
+                </android.support.v7.widget.RecyclerView>
+
+            </LinearLayout>
+
+
+
         </LinearLayout>
     </ScrollView>
 
