--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -26,8 +26,8 @@
                 android:id="@+id/name"/>
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="400dp"
+                android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:id="@+id/image"
                 android:background="#000000"
