--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.lesgo.wheretogo.ShowPlaceActivity">
 
 
@@ -23,15 +19,61 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name here"
-                android:id="@+id/name"/>
+                android:id="@+id/name"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:layout_gravity="center"/>
 
             <ImageView
                 android:layout_width="400dp"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:layout_gravity="center"
                 android:id="@+id/image"
-                android:background="#000000"
+                android:src="@drawable/noimg"
                 android:padding="1dp"/>
+
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="5"
+                    android:textSize="80dp"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/5"
+                    android:textSize="40dp"
+                    android:layout_gravity="center"/>
+
+            </LinearLayout>
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="#B3C2C7"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Place information"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
+            
+
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -44,6 +86,12 @@
                 android:layout_height="wrap_content"
                 android:text="Address"
                 android:id="@+id/address"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/showplace"
+                android:text="location"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -104,7 +152,20 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No comments yet! Be the first to comment"
+                    android:visibility="gone"
+                    android:id="@+id/nocomment"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Comments "/>
 
                 <android.support.v7.widget.RecyclerView
                     android:layout_width="match_parent"
