--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/noimg"
         android:id="@+id/picture"
         />
 
