--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -15,14 +15,25 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name here"
-                android:id="@+id/name"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:layout_gravity="center"/>
+                android:orientation="vertical"
+                android:background="#B3C2C7"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name here"
+                    android:id="@+id/name"
+                    android:textSize="20dp"
+                    android:layout_gravity="center"
+                    android:textColor="#ffffff"
+                    android:textStyle="bold"/>
+
+
+            </LinearLayout>
 
             <ImageView
                 android:layout_width="400dp"
@@ -31,8 +42,6 @@
                 android:id="@+id/image"
                 android:src="@drawable/noimg"
                 android:padding="1dp"/>
-
-
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -60,7 +69,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:background="#B3C2C7"
                 android:padding="10dp">
 
@@ -68,18 +77,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Place information"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    android:layout_gravity="center"
+                    android:textColor="#ffffff"/>
             </LinearLayout>
 
-            
 
-
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Category"
-                android:id="@+id/category"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_marginLeft="130dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Category"
+                    android:id="@+id/category"
+                    android:textSize="20dp"/>
+
+                <ImageView
+                    android:layout_marginLeft="20dp"
+                    android:layout_width="50px"
+                    android:layout_height="50px"
+                    android:src="@mipmap/ic_launcher"/>
+
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="wrap_content"
