--- a/app/src/main/res/layout/comment_view.xml
+++ b/app/src/main/res/layout/comment_view.xml
@@ -10,6 +10,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Comment"
         android:id="@+id/comment"
+        android:layout_marginBottom="6dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -25,17 +26,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textSize="25dp"
         android:text="Small Text"
         android:id="@+id/rating"
         android:layout_centerVertical="true"
         android:layout_toStartOf="@+id/star" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/star"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@drawable/star"/>
 </RelativeLayout>
