--- a/app/src/main/res/layout/activity_show_place.xml
+++ b/app/src/main/res/layout/activity_show_place.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/image"
                 android:src="@drawable/noimg"
                 android:padding="1dp"
-                android:visibility="gone"/>
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -59,6 +59,14 @@
                     android:layout_gravity="center"/>
 
             </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Average Rating"
+                android:textSize="20dp"
+                android:layout_gravity="center"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -151,7 +159,8 @@
                 android:stepSize="1"
                 android:rating="1"
                 android:layout_marginTop="20dp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                />
 
             <EditText
                 android:layout_width="wrap_content"
@@ -160,11 +169,13 @@
                 android:ems="15"
                 android:singleLine="false"
                 android:hint="Your comment"
+
                 />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="20dp">
 
                 <EditText
                     android:layout_width="wrap_content"
@@ -178,36 +189,27 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Submit"
+                    android:layout_marginLeft="35dp"
                     android:id="@+id/submitcomment"/>
 
             </LinearLayout>
 
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No comments yet! Be the first to comment"
+                android:visibility="gone"
+                android:id="@+id/nocomment"
+                android:layout_marginBottom="20dp"/>
 
-
-            <LinearLayout
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="No comments yet! Be the first to comment"
-                    android:visibility="gone"
-                    android:id="@+id/nocomment"
-                    android:layout_marginBottom="20dp"/>
-
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scrollbars="vertical"
-                    android:id="@+id/recyclerview">
-                </android.support.v7.widget.RecyclerView>
-
-            </LinearLayout>
-
-
+                android:scrollbars="vertical"
+                android:id="@+id/recyclerview"
+                >
+            </android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
     </ScrollView>
