--- a/app/src/main/res/layout/activity_contribute.xml
+++ b/app/src/main/res/layout/activity_contribute.xml
@@ -10,10 +10,39 @@
     tools:context="com.example.lesgo.wheretogo.ContributeActivity"
     android:orientation="vertical">
 
+
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:id="@+id/img1"
+            android:layout_gravity="center"
+            android:src="@drawable/nopic"
+            />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category:"/>
+
+        <Spinner
+            android:id="@+id/planets_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="7"
+        android:layout_marginTop="15dp"
         android:id="@+id/name"
         android:hint="Place Name"/>
 
@@ -58,7 +87,6 @@
 
     </LinearLayout>
 
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,23 +97,6 @@
         android:hint="Address of place"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Category:"/>
-
-        <Spinner
-            android:id="@+id/planets_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
 
 
     <EditText
@@ -100,29 +111,14 @@
 
         />
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:id="@+id/img1"
-        android:layout_gravity="center"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Image"
-        android:id="@+id/picture"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gpsabc"
         android:text="Status"
         android:layout_gravity="center"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="20dp"
+        android:visibility="invisible"/>
 
 
     <Button
